--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ description = "Schema-agnostic structural diagnostics and normalization engine."
 readme = "README.md"
 requires-python = ">=3.10"
 
-# License intentionally TBD until governance decision is finalized
-license = { text = "TBD" }
+# License intentionally NOASSERTION until governance decision is finalized
+license = { text = "NOASSERTION" }
 
 authors = [
   { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
@@ -18,7 +18,8 @@ authors = [
 
 dependencies = [
   "ruamel.yaml>=0.17.32",
-  "jsonschema>=4.19.0"
+  "jsonschema>=4.19.0",
+  "typer>=0.12.0"
 ]
 
 [project.urls]
@@ -34,6 +35,9 @@ dev = [
   "isort>=5.0.0",
   "mypy>=1.0.0"
 ]
+
+[project.scripts]
+stamp = "stamp.cli:cli"
 
 # Flat-layout package discovery (stamp/ at repo root)
 [tool.setuptools.packages.find]
