--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,28 @@ authors = [
   { name = "Shawn C. Wright", email = "swright@waveframelabs.org" }
 ]
 
+classifiers = [
+  "License :: OSI Approved :: Apache Software License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Operating System :: OS Independent",
+  "Intended Audience :: Developers",
+  "Topic :: Software Development :: Quality Assurance",
+  "Topic :: Software Development :: Libraries"
+]
+
+keywords = [
+  "metadata",
+  "validation",
+  "governance",
+  "reproducibility",
+  "research",
+  "schema"
+]
+
 dependencies = [
   "ruamel.yaml>=0.17.32",
   "jsonschema>=4.19.0",
