--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "waveframe-stamp"
-version = "0.1.0"
+version = "0.1.1"
 description = "Schema-agnostic structural diagnostics engine for governed research artifacts."
 readme = "README.md"
 requires-python = ">=3.10"
@@ -39,6 +39,7 @@ keywords = [
 
 dependencies = [
   "ruamel.yaml>=0.17.32",
+  "PyYAML>=6.0",
   "jsonschema>=4.19.0",
   "typer>=0.12.0"
 ]
